# cocoaskills

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE.ru.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  LICENSE  README.md  README.ru.md  SECURITY.md  SECURITY.ru.md  pyproject.toml
.github/workflows/: ci.yml  distribution-smoke.yml  release.yml
docs/: CNAME  audit-design.md  index.html  install.sh  mvp-design.md  robots.txt  sitemap.xml  skill-authoring.md  skillfile-v2-design.md  skillfile-v2-design.ru.md  v0.11-design.md  v0.11-design.ru.md  v0.3-design.md  v0.4-design.md  v0.5-design.md  v0.6-design.md  v0.8-design.md  v0.9-design.md  v0.9-design.ru.md
src/csk/: __init__.py  _ed25519.py  adapters.py  attest.py  audit_registry.py  cli.py  closure.py  config.py  consumers.py  deprecation.py  dev_substitutions.py  env_files.py  gc.py  git_ops.py  gitignore_gate.py  global_bins.py  global_install.py  hashing.py  hybrid.py  identifiers.py  installer.py  locale.py  locking.py  manifest.py  mcp_configs.py  project_resolver.py  protocol_json.py  shell_init.py  shims.py  skillcheck.py  skillspec.py  (+4 more)
tests/: conftest.py  test_activation_modes.py  test_adapters.py  test_audit_backends.py  test_audit_cache.py  test_audit_capabilities.py  test_audit_cli.py  test_audit_detectors.py  test_audit_policy.py  test_audit_publish.py  test_audit_registry.py  test_cli.py  test_closure_install.py  test_config.py  test_dev_substitution.py  test_e2e.py  test_env_files.py  test_gc.py  test_gitignore_gate.py  test_global_install.py  test_hashing.py  test_hybrid_scope.py  test_install.py  test_locale.py  test_locking.py  test_manifest.py  test_mcp_dependencies.py  test_project_resolver.py  test_protocol_conformance.py  test_protocol_json.py  test_refs.py  test_requirements_spec.py  test_shell_init.py  test_shims.py  test_skillcheck.py  test_skillspec.py  test_source_identity.py  test_status.py  test_system_config.py  test_whitelist.py
(+20 files in other folders)
